# mycv-ai

./: .gitignore  DEVELOPMENT.md  README.md  conftest.py  pyproject.toml  start_cv_avatar.sh
backend/: config.py  main.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  animation_service.py  cv_service.py  llm_service.py  transcription_service.py  tts_service.py  websocket_manager.py
data/: cv.txt
frontend/: index.html
frontend/js/: utils.js  websocket.js
frontend/styles/: main.css
tests/: conftest.py
tests/integration/: test_cv_llm_integration.py
tests/mocks/: __init__.py  ml_dependencies.py
tests/unit/: test_animation_service.py  test_config.py  test_cv_service.py  test_llm_service.py  test_main.py  test_schemas.py  test_transcription_service.py  test_tts_service.py  test_websocket_manager.py
